<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@mipmap/bg_jump" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:backgroundTint="@color/theme"
        android:gravity="center"
        android:text="@string/navigation_sample_jump" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nav_sample_jump_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:backgroundTint="@color/theme"
        android:gravity="center"
        android:text="@string/navigation_sample_jump_action" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nav_sample_jump_argument_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:backgroundTint="@color/theme"
        android:gravity="center"
        android:text="@string/navigation_sample_jump_arguments_normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nav_sample_jump_argument_bean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:backgroundTint="@color/theme"
        android:gravity="center"
        android:text="@string/navigation_sample_jump_arguments_bean" />
</androidx.appcompat.widget.LinearLayoutCompat>