<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        app:cardCornerRadius="@dimen/dp2"
        app:cardElevation="@dimen/dp2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/recommend"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/livedata_hint" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/dp10"
        app:cardCornerRadius="@dimen/dp2"
        app:cardElevation="@dimen/dp2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/map_transform_hint"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_livedata_map"
                style="@style/normalTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_observer_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/start_oberver"
            android:textSize="@dimen/sp16" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_observer_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_weight="1"
            android:text="@string/map_transform"
            android:textSize="@dimen/sp16" />

    </LinearLayout>

</LinearLayout>