<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/navigation_desc"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="358dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="4dp"
            android:src="@mipmap/bg_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_nav_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp20"
            android:backgroundTint="@color/theme"
            android:gravity="center"
            android:text="@string/drawerlayout_nav"
            app:layout_constraintBottom_toTopOf="@+id/btn_bottom" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/theme"
            android:text="@string/nav_bottom"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>