<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_life_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_life"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/bg_lifecycles" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_life_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp2"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:id="@+id/ll_life_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/dp10"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:text="@string/recommend"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="@dimen/dp20"
                        android:lineSpacingExtra="@dimen/dp4"
                        android:text="@string/lifecycles_hint"
                        android:textColor="@color/black" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:text="@string/location_msg" />

            <TextView
                android:id="@+id/tv_life_location"
                style="@style/normalTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp20"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add_obserber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/dp10"
                        android:paddingRight="@dimen/dp10"
                        android:text="@string/start_monitor"
                        android:textSize="@dimen/sp16" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp10"
                        android:layout_marginEnd="@dimen/dp10"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/dp10"
                        android:paddingRight="@dimen/dp10"
                        android:text="@string/start_location"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>