<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp10"
                    app:cardCornerRadius="@dimen/dp2"
                    app:cardElevation="@dimen/dp2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/dp10">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/normalTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/recommend"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/normalTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:lineSpacingExtra="@dimen/dp2"
                            android:text="@string/viewmodel_hint" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    app:cardCornerRadius="@dimen/dp2"
                    app:cardElevation="@dimen/dp2">

                    <Chronometer
                        android:id="@+id/chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_fragment_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/viewmodel_fragment_demo" />

            </LinearLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</layout>