<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="@dimen/dp4"
    app:cardElevation="@dimen/dp4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/normalTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logcat"
            android:textColor="@color/theme" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_weight="1"
            android:background="#f0f0f0"
            android:minHeight="200dp"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_flow_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_float_clear"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme"
                android:gravity="center"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_theme"
                android:gravity="center"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:text="@string/move"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_float_close"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/dp10"
                android:layout_weight="1"
                android:background="@drawable/btn_theme"
                android:gravity="center"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>