<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:startDestination="@+id/homeFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.welcome.jetpack_learn.ui.home.HomeFragment"
        android:label="@string/title_home">

        <action
            android:id="@+id/action_navigationFragment_to_webFragment"
            app:destination="@id/webFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/webFragment"
        android:name="com.welcome.jetpack_learn.other.WebFragment"
        android:label=""
        tools:layout="@layout/fragment_web">
        <argument
            android:name="link"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.welcome.jetpack_learn.ui.navigation.NavigationFragment"
        android:label="@string/menu_navigation">
        <action
            android:id="@+id/action_navigationFragment_to_navSampleActivity"
            app:destination="@id/navSampleActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigationFragment_to_bottomNavSampleActivity"
            app:destination="@id/bottomNavSampleActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/lifecyclesFragment"
        android:name="com.welcome.jetpack_learn.ui.lifecycles.LifecyclesFragment"
        android:label="Lifecycles" />

    <fragment
        android:id="@+id/pagingDemoFragment"
        android:name="com.welcome.jetpack_learn.ui.paging.PagingDemoFragment"
        android:label="分页加载" />

    <activity
        android:id="@+id/navSampleActivity"
        android:name="com.welcome.jetpack_learn.ui.navigation.activity.NavSampleActivity"
        android:label="NavSampleActivity" />

    <activity
        android:id="@+id/bottomNavSampleActivity"
        android:name="com.welcome.jetpack_learn.ui.navigation.activity.BottomNavSampleActivity"
        android:label="BottomNavSampleActivity" />

    <activity
        android:id="@+id/pagingWithDaoActivity"
        android:name="com.welcome.jetpack_learn.ui.paging.PagingWithDaoActivity"
        android:label="activity_paging_with_dao" />

    <activity
        android:id="@+id/pagingWithNetWorkActivity"
        android:name="com.welcome.jetpack_learn.ui.paging.PagingWithDaoNetWorkActivity"
        android:label="activity_paging_with_new_work" />

    <fragment
        android:id="@+id/moreSampleFragment"
        android:name="com.welcome.jetpack_learn.ui.MoreSampleFragment"
        android:label="@string/menu_more" />

    <activity
        android:id="@+id/viewModelShareActivity"
        android:name="com.welcome.jetpack_learn.ui.viewmodel.ViewModelShareActivity"
        android:label="activity_view_model_share" />
</navigation>